  using QoS 1 or 2 will receive the quota-exceeded reason code in the
  corresponding PUBACK/PUBREC.
- MOSQ_EVT_TICK is now passed to plugins when `per_listener_settings` is true.
- The dynamic security plugin now supports `%c` and `%u` patterns for
  substituting client id and username respectively, in all ACLs except for
  subscribeLiteral and unsubscribeLiteral.
- Add `mosquitto_sub_matches_acl()`, which can match one topic filter (a
  subscription) against another topic filter (an ACL).
- Registration of the MOSQ_EVT_CONTROL plugin event is now handled globally
  across the broker, so only a single plugin can register for a given $CONTROL
  topic.
- Add `mosquitto_plugin_set_info()` to allow plugins to tell the broker their
  name and version.
- Add builtin $CONTROL/broker/v1 control topic with the `listPlugins`
  command. This is disabled by default, but can be enabled with the
  `enable_control_api` option.
- Plugins no longer need to define mosquitto_plugin_cleanup() if they do not
  need to do any of their own cleanup. Callbacks will be unregistered
  automatically.
- The dynamic security plugin now reports client connections in getClient and
  listClients.
- The dynamic security plugin now generates an initial configuration if none
  is present, including a set of default roles.
- Add `mosquitto_set_clientid()` to allow plugins to force a client id for a
  client.
- The dynamic security plugin now only kicks clients at the start of the next
  network loop, to give chance for PUBACK/PUBREC to be sent. Closes #2474.
- Add MOSQ_EVT_SUBSCRIBE and MOSQ_EVT_UNSUBSCRIBE events that are called when
  subscribe/unsubscribes actually succeed.
- Add `mosquitto_persistence_location()` for plugins to use to find a valid
  location for storing persistent data.

Client library:
- Add MOSQ_OPT_DISABLE_SOCKETPAIR to allow the disabling of the socketpair
  feature that allows the network thread to be woken from select() by another