@@ -201,18 +201,21 @@ tests = [
     (1, './14-dynsec-allow-wildcard.py'),
     (1, './14-dynsec-anon-group.py'),
     (1, './14-dynsec-auth.py'),
-    (1, './14-dynsec-client.py'),
     (1, './14-dynsec-client-invalid.py'),
+    (1, './14-dynsec-client.py'),
+    (1, './14-dynsec-config-init-env.py'),
+    (1, './14-dynsec-config-init-file.py'),
+    (1, './14-dynsec-config-init-random.py'),
     (1, './14-dynsec-default-access.py'),
     (1, './14-dynsec-disable-client.py'),
-    (1, './14-dynsec-group.py'),
     (1, './14-dynsec-group-invalid.py'),
+    (1, './14-dynsec-group.py'),
     (1, './14-dynsec-modify-client.py'),
     (1, './14-dynsec-modify-group.py'),
     (1, './14-dynsec-modify-role.py'),
     (1, './14-dynsec-plugin-invalid.py'),
-    (1, './14-dynsec-role.py'),
     (1, './14-dynsec-role-invalid.py'),
+    (1, './14-dynsec-role.py'),
 
     #(1, './15-persist-client-msg-in-v5-0.py'),
     #(1, './15-persist-client-msg-out-queue-v3-1-1.py'),
