@@ -86,6 +86,8 @@ Plugins / plugin interface:
 - The dynamic security plugin now supports `%c` and `%u` patterns for
   substituting client id and username respectively, in all ACLs except for
   subscribeLiteral and unsubscribeLiteral.
+- The dynamic security plugin now supports multiple ways to initialise the
+  first configuration file.
 - Add `mosquitto_sub_matches_acl()`, which can match one topic filter (a
   subscription) against another topic filter (an ACL).
 - Registration of the MOSQ_EVT_CONTROL plugin event is now handled globally
